[package]
name = "capdows"
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
either = "1.14.0"
tokio = { version = "1.44.2", features = ["rt"] }


[dependencies.windows]
version = "0.61.1"
features = [
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
]
