[package]
name = "capdows_controls"
version = "0.0.1"
edition = "2024"
[features]
WindowFinder = []

[dependencies]
either = "1.14.0"

[dependencies.windows]
version = "0.60.0"
features = [
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
]
[dependencies.capdows]
path = "../capdows"