[package]
name = "capdows_resource"
version = "0.0.1"
edition = "2021"

[dependencies]
toml = "0.5.0"

[package.metadata.original.winres]
name = "winres"
description = "Create and set windows icons and metadata for executables"
version = "0.1.11"
authors = ["Max Resch <resch.max@gmail.com>"]
license = "MIT"
repository = "https://github.com/mxre/winres"
documentation= "https://docs.rs/winres/*/winres/"
