[package]
name = "capdows_controls"
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
either = "1.14.0"
paste = "1.0.15"
[build-dependencies]
embed-resource = "3.0.1"
[dependencies.windows]
version = "0.60.0"
features = [
    "Win32_System_SystemServices",
    "Win32_UI_Shell",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_UI_Input",
]
[dependencies.capdows]
path = "../capdows"
