[package]
name = "capdows_controls"
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
either = "1.14.0"
euclid = "0.22.11"

[build-dependencies.capdows_resource]
path = "../res"
[dependencies.windows-sys]
version = "0.60.2"
features = [
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
]
[dependencies.capdows]
path = "../capdows"
[dependencies.capdows_macros]
path = "../macros"
[dependencies.capdows_resource]
path = "../res"