[package]
name = "capdows_example"
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
either = "1.14.0"
euclid = "0.22.11"
[build-dependencies]
euclid = "0.22.11"
[dependencies.capdows]
features = ["timeout_msg_box"]
path = "../capdows"

[dependencies.capdows_controls]
path = "../controls"

[build-dependencies.capdows_resource]
path = "../res"

[build-dependencies.capdows_controls]
path = "../controls"

