[package]
name = "capdows_resource"
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
either = "1.14.0"
embed-resource = "3.0.2"


[dependencies.windows-sys]
version = "0.60.2"
features = [
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
]
[dependencies.capdows]
path = "../capdows"